force-app/main/default/objects/CCR_DeviceDiagnostic__c/CCR_DeviceDiagnostic__c.object-meta.xml
<CustomObject>
    <description>Used by: CCR. Description: It&apos;s to store information that will be show to the consumer to get diagnostic result.</description>
    <label>Device Diagnostic</label>
    <nameField>
        <label>Device Diagnostic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Device Diagnostics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>