force-app/main/default/objects/CCR_DeviceDiagnostic__c/fields/CCR_Active__c.field-meta.xml
<CustomField>
    <fullName>CCR_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used By:CCR
Description: Is this step active for the Diagnostic process?</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>