force-app/main/default/objects/CCR_DeviceDiagnostic__c/fields/CCR_DefaultMessage__c.field-meta.xml
<CustomField>
    <fullName>CCR_DefaultMessage__c</fullName>
    <description>Used by: CCR 
Description: field used to store default message of the issue</description>
    <label>Default Message</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>