force-app/main/default/objects/CCR_DeviceDiagnostic__c/fields/CCR_DiagnosticResult__c.field-meta.xml
<CustomField>
    <fullName>CCR_DiagnosticResult__c</fullName>
    <description>Used by: CCR
Description: It&apos;s to store information about the diagnostic result code as configured also in QURE configuration.</description>
    <label>Diagnostic Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCR_DiagnosticResult</valueSetName>
    </valueSet>
</CustomField>