force-app/main/default/objects/CCR_DeviceDiagnostic__c/fields/CCR_DiagnosticUID__c.field-meta.xml
<CustomField>
    <fullName>CCR_DiagnosticUID__c</fullName>
    <description>Used By: CCR
Description:The fields will be used to leverage for the deployment of device config data in other environments</description>
    <externalId>true</externalId>
    <label>Diagnostic UID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>