force-app/main/default/objects/CCR_DeviceDiagnostic__c/fields/CCR_DisplayNextTitleText__c.field-meta.xml
<CustomField>
    <fullName>CCR_DisplayNextTitleText__c</fullName>
    <description>Used by: CCR
Description: This field is used to hold the Message name for the Display Next Title text for the issue/tips &amp; tricks</description>
    <inlineHelpText>Put the Message name of the Display Next Title Text when clicking of this issue</inlineHelpText>
    <label>Display Next Title Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>