force-app/main/default/objects/CCR_DeviceDiagnostic__c/fields/CCR_EndMessageType__c.field-meta.xml
<CustomField>
    <fullName>CCR_EndMessageType__c</fullName>
    <description>Used by: CCR 
Description: field used to store type of end message</description>
    <label>End Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Message</fullName>
                <default>true</default>
                <label>Standard Message</label>
            </value>
            <value>
                <fullName>Input Message</fullName>
            </value>
            <value>
                <fullName>Select Message</fullName>
            </value>
            <value>
                <fullName>Critical Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>