force-app/main/default/objects/CCR_DeviceDiagnostic__c/fields/CCR_ExcludeUserTypes__c.field-meta.xml
<CustomField>
    <fullName>CCR_ExcludeUserTypes__c</fullName>
    <description>Used By: CCR
Description: This field is to exclude the users for some diagnostic issues.</description>
    <label>Exclude User Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCR_UserType</valueSetName>
    </valueSet>
</CustomField>