force-app/main/default/objects/CCR_DeviceDiagnostic__c/fields/CCR_IsIssueSolved__c.field-meta.xml
<CustomField>
    <fullName>CCR_IsIssueSolved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by: CCR
Description: To flag if the issue has been solved</description>
    <label>Is Issue Solved</label>
    <type>Checkbox</type>
</CustomField>