force-app/main/default/objects/CCR_DeviceDiagnostic__c/fields/CCR_MessageName__c.field-meta.xml
<CustomField>
    <fullName>CCR_MessageName__c</fullName>
    <description>Used by: CCR. 
Description: It&apos;s for end messages, to store information which end message needs to be displayed (e.g. code not covered)</description>
    <label>Message Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessory Issue</fullName>
            </value>
            <value>
                <fullName>Accessory Issue Agents</fullName>
            </value>
            <value>
                <fullName>Address1 Title</fullName>
            </value>
            <value>
                <fullName>Address2 Title</fullName>
            </value>
            <value>
                <fullName>Address3</fullName>
                <label>Address 3</label>
            </value>
            <value>
                <fullName>Address4</fullName>
                <label>Address 4</label>
            </value>
            <value>
                <fullName>Address5</fullName>
                <label>Address 5</label>
            </value>
            <value>
                <fullName>Address Lookup</fullName>
            </value>
            <value>
                <fullName>Asset Blocked</fullName>
            </value>
            <value>
                <fullName>Blinking Bottom Red Light</fullName>
            </value>
            <value>
                <fullName>Blinking Charger Red Light</fullName>
            </value>
            <value>
                <fullName>Blinking Holder Red Light</fullName>
            </value>
            <value>
                <fullName>Blinking Red Light</fullName>
            </value>
            <value>
                <fullName>Bluetooth malfunction</fullName>
            </value>
            <value>
                <fullName>Broken Heating Blade</fullName>
            </value>
            <value>
                <fullName>Call Center Agent SWAP</fullName>
            </value>
            <value>
                <fullName>Cancel Button</fullName>
            </value>
            <value>
                <fullName>CarePlus Invite Agent</fullName>
                <label>Care+ Invite Agent</label>
            </value>
            <value>
                <fullName>CarePlus Invite Consumer</fullName>
                <label>Care+ Invite Consumer</label>
            </value>
            <value>
                <fullName>Channel Selected</fullName>
            </value>
            <value>
                <fullName>City Title</fullName>
            </value>
            <value>
                <fullName>Code Not Covered</fullName>
            </value>
            <value>
                <fullName>Color Swap Title</fullName>
            </value>
            <value>
                <fullName>Confirm Button</fullName>
            </value>
            <value>
                <fullName>CourierDelivery</fullName>
                <label>Courier Delivery</label>
            </value>
            <value>
                <fullName>Courier Delivery Subtitle</fullName>
            </value>
            <value>
                <fullName>Cracks and Dirty Contacts</fullName>
            </value>
            <value>
                <fullName>Cracks and Other Damages</fullName>
            </value>
            <value>
                <fullName>CVS Mobile Number Confirm</fullName>
            </value>
            <value>
                <fullName>CVS Selected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>