force-app/main/default/objects/CCR_DeviceDiagnostic__c/fields/CCR_Model__c.field-meta.xml
<CustomField>
    <fullName>CCR_Model__c</fullName>
    <description>Used By:CCR
Description:It&apos;s to store information about device model.</description>
    <label>Model</label>
    <length>30</length>
    <type>Text</type>
</CustomField>