force-app/main/default/objects/CCR_DeviceDiagnostic__c/fields/CCR_NextStep__c.field-meta.xml
<CustomField>
    <fullName>CCR_NextStep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used by: CCR 
Description: field used to store next step of QURE flow</description>
    <label>Next Step</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>CCR_DeviceDiagnostic__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>End Message, Tips and Tricks, Diagnostic Result</value>
        </filterItems>
        <filterItems>
            <field>CCR_DeviceDiagnostic__c.CCR_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CCR_DeviceDiagnostic__c</referenceTo>
    <relationshipLabel>Device Diagnostics (Next Step)</relationshipLabel>
    <relationshipName>Previous_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>