force-app/main/default/objects/CCR_DeviceDiagnostic__c/fields/CCR_OrderPriority__c.field-meta.xml
<CustomField>
    <fullName>CCR_OrderPriority__c</fullName>
    <description>Used by: CCR. 
Description: It&apos;s to store information in which order images for issues should be displayed in page layout.</description>
    <label>Order/Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>