force-app/main/default/objects/CCR_DeviceDiagnostic__c/fields/CCR_ParentDiagnostic__c.field-meta.xml
<CustomField>
    <fullName>CCR_ParentDiagnostic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used By: CCR
Description: Parent issue</description>
    <label>Parent Diagnostic</label>
    <referenceTo>CCR_DeviceDiagnostic__c</referenceTo>
    <relationshipLabel>Device Diagnostics (Parent Diagnostic)</relationshipLabel>
    <relationshipName>Next_Diagnostics</relationshipName>
    <type>Lookup</type>
</CustomField>