force-app/main/default/objects/CCR_DeviceDiagnostic__c/fields/CCR_VeevInitialPage__c.field-meta.xml
<CustomField>
    <fullName>CCR_VeevInitialPage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used By: CCR
Description: Field is to identify the issues to show on the VEEV first page</description>
    <label>Veev Initial Page</label>
    <type>Checkbox</type>
</CustomField>