force-app/main/default/objects/CCR_DeviceDiagnostic__c/recordTypes/CCR_DeviceIssue.recordType-meta.xml
<RecordType>
    <fullName>CCR_DeviceIssue</fullName>
    <active>true</active>
    <description>It&apos;s for information which need to be displayed for consumer during the diagnostic process</description>
    <label>Device Issue</label>
</RecordType>