force-app/main/default/objects/CCR_DeviceDiagnostic__c/recordTypes/CCR_DiagnosticResult.recordType-meta.xml
<RecordType>
    <fullName>CCR_DiagnosticResult</fullName>
    <active>true</active>
    <description>It&apos;s for result of diagnostic</description>
    <label>Diagnostic Result</label>
</RecordType>