force-app/main/default/objects/CCR_DeviceDiagnostic__c/recordTypes/CCR_EndMessage.recordType-meta.xml
<RecordType>
    <fullName>CCR_EndMessage</fullName>
    <active>true</active>
    <description>It&apos;s for information which need to be displayed for consumer as end messages at the end of Qure process.</description>
    <label>End Message</label>
</RecordType>