force-app/main/default/objects/CCR_DeviceDiagnostic__c/recordTypes/CCR_OtherMessage.recordType-meta.xml
<RecordType>
    <fullName>CCR_OtherMessage</fullName>
    <active>true</active>
    <description>It&apos;s for all labels and messages that need to be displayed as info</description>
    <label>Other Message</label>
</RecordType>