force-app/main/default/objects/CCR_DeviceDiagnostic__c/recordTypes/CCR_TipsAndTricks.recordType-meta.xml
<RecordType>
    <fullName>CCR_TipsAndTricks</fullName>
    <active>true</active>
    <description>It&apos;s for Tips and Tricks information which need to be displayed for consumer during the diagnostic process</description>
    <label>Tips and Tricks</label>
</RecordType>